fuckin put . before / when linking images and styles

--- a/TeaCozy/teaCozy.html
+++ b/TeaCozy/teaCozy.html
@@ -10,25 +10,21 @@
   </head>
   <body>
     <header>
-        <div id="logo">
       <img
         class="logo"
-        src="/TeaCozy/resources/images/img-tea-cozy-logo.webp"
+        src="./resources/images/img-tea-cozy-logo.webp"
         alt="Tea Cozy Logo"
       />
-        </div>
+      <nav>
       <ul>
-        <li><a href="Mission"></a>Mission</li>
-        <li><a href="Featured Tea">Featured Tea</a></li>
-        <li><a href="Locations"></a>Locations</li>
+        <li><a href="mission"></a>Mission</li>
+        <li><a href="featured-tea">Featured Tea</a></li>
+        <li><a href="locations"></a>Locations</li>
       </ul>
+    </nav>
     </header>
 
     <section class="mission">
-      <img
-        src="/TeaCozy/resources/images/img-tea-cozy-mission.webp"
-        alt="Tea Cozy Mission"
-      />
       <div id="mission-banner">
         <h2>Our Mission</h2>
         <h4>
@@ -38,20 +34,32 @@
       </div>
     </section>
 
-    <section class="top-teas">
+    <section class="featured-tea">
         <div id="top-tea-banner">
         <h2>Tea Of The Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
     </div>
-    <div id="top-tea-container">
-        <ul>
-            <li><img src="/images/img-berryblitz.webp">Fall Berry Blitz Tea</img></li>
-            <li><img src="/images/img-spiced-rum.webp">Spiced Rum Tea</img></li>
-            <li><img src="/images/img-donut.webp">Seasonal Donuts</img></li>
-            <li><img src="/images/img-myrtle-ave.webp">Myrtle Ave Tea</img></li>
-            <li><img src="/TeaCozy/resources/images/img-bedford-bizarre.webp">Bedford Bizarre Tea</img></li>
-        </ul>
-        </div>
+    <div class="tea">
+        <figure >
+          <img src="./resources/images/img-berryblitz.webp" alt="">
+          <figcaption>Fall Berry Blitz Tea</figcaption>
+        </figure>
+        <figure>
+          <img src="./resources/images/img-spiced-rum.webp" alt="">
+          <figcaption>Spiced Rum Tea</figcaption>
+        </figure>
+        <figure>
+          <img src="./resources/images/img-donut.webp" alt="">
+          <figcaption>Seasonal Donuts</figcaption>
+        </figure>
+        <figure>
+          <img src="./resources/images/img-myrtle-ave.webp" alt="">
+          <figcaption>Myrtle Ave Tea</figcaption>
+        </figure>
+        <figure>
+          <img src="./resources/images/img-bedford-bizarre.webp" alt="">
+          <figcaption>Bedford Bizarre Tea</figcaption>
+        </figure>
     </section>
 
     <section class="locations">
